--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     </div>
 
     <audio id="bg-music" loop preload="auto">
-        <source src="path_to_your_song.mp3" type="audio/mpeg">
+        <source src="bg.mp3" type="audio/mpeg">
     </audio>
 
     <div class="container">
