--- a/index.html
+++ b/index.html
@@ -41,17 +41,35 @@
         #enter-button {
             padding: 20px 50px;
             font-size: 26px;
-            background-color: #444;
+            background-color: #222;
             color: #fff;
             border: 2px solid #fff;
             cursor: pointer;
-            border-radius: 8px;
-            transition: background-color 0.3s ease, transform 0.3s ease;
+            border-radius: 12px;
+            transition: background-color 0.3s ease, transform 0.3s ease, box-shadow 0.3s ease;
+            box-shadow: 0 0 15px rgba(255, 255, 255, 0.5);
+            animation: pulse 1.5s infinite;
         }
 
         #enter-button:hover {
-            background-color: #222;
+            background-color: #444;
             transform: scale(1.1);
+            box-shadow: 0 0 25px rgba(255, 255, 255, 0.8);
+        }
+
+        @keyframes pulse {
+            0% {
+                transform: scale(1);
+                box-shadow: 0 0 15px rgba(255, 255, 255, 0.5);
+            }
+            50% {
+                transform: scale(1.05);
+                box-shadow: 0 0 25px rgba(255, 255, 255, 0.7);
+            }
+            100% {
+                transform: scale(1);
+                box-shadow: 0 0 15px rgba(255, 255, 255, 0.5);
+            }
         }
 
         .container {
@@ -138,7 +156,7 @@
     </div>
 
     <audio id="bg-music" loop preload="auto">
-        <source src="bg.mp3" type="audio/mpeg">
+        <source src="path_to_your_song.mp3" type="audio/mpeg">
     </audio>
 
     <div class="container">
